// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonGroup > should render 1`] = `
<DocumentFragment>
  <div
    class="inline-flex w-full items-center"
    data-testid="ButtonGroup"
    role="radiogroup"
  />
</DocumentFragment>
`;

exports[`ButtonGroup > should render with className 1`] = `
<DocumentFragment>
  <div
    class="inline-flex w-full items-center space-x-3"
    data-testid="ButtonGroup"
    role="radiogroup"
  />
</DocumentFragment>
`;

exports[`ButtonGroupOption > should render with modern variant 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    aria-label="tooltip"
    class="css-1oqtqef"
    data-testid="ButtonGroupOption"
    role="radio"
    type="button"
  >
    Test
  </button>
</DocumentFragment>
`;
